feat(AM-43): fixed minikube deployment

--- a/infra/deployment/kubernetes/helm/values/api-gateway-service/api-gateway-rest.yaml
+++ b/infra/deployment/kubernetes/helm/values/api-gateway-service/api-gateway-rest.yaml
@@ -10,7 +10,7 @@ portEnvKey: APP_REST_PORT
 image:
   name: api-gateway-service-rest
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 command: ["node", "dist/rest.main"]
 
