--- a/infra/deployment/kubernetes/helm/values/registry-service/registry.yaml
+++ b/infra/deployment/kubernetes/helm/values/registry-service/registry.yaml
@@ -14,7 +14,7 @@ sharedConfigMap:
 image:
   name: registry-service-rest
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 command: ["node", "dist/rest.main"]
 
