--- a/infra/deployment/kubernetes/helm/values/users-service/users-graphql.yaml
+++ b/infra/deployment/kubernetes/helm/values/users-service/users-graphql.yaml
@@ -10,7 +10,7 @@ portEnvKey: APP_GRAPHQL_PORT
 image:
   name: users-service-graphql
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 command: ["node", "dist/src/graphql.main"]
 
