--- a/infra/deployment/kubernetes/helm/values/users-service/users-grpc.yaml
+++ b/infra/deployment/kubernetes/helm/values/users-service/users-grpc.yaml
@@ -10,7 +10,7 @@ protocol: grpc
 image:
   name: users-service-grpc
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 command: ["node", "dist/src/grpc.main"]
 
