--- a/infra/deployment/kubernetes/helm/values/auth-service/auth-grpc.yaml
+++ b/infra/deployment/kubernetes/helm/values/auth-service/auth-grpc.yaml
@@ -10,7 +10,7 @@ protocol: grpc
 image:
   name: auth-service-grpc
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 command: ["node", "dist/src/grpc.main"]
 
