feat(AM-43): Kubernetes configuration adjustment service & admin (#10)
* feat(AM-43): added base kubernetes adjustments

* feat(AM-43): added pdb configuration, values renaming and configmap

* feat(AM-43): added rediness and liveness probes with healthchecks

* feat(AM-43): added ingress and egress configurations

* feat(AM-43): fixed docker containers build

* feat(AM-43): fixed health probe and kuber infra

* feat(AM-43): update versions and refactor rest prefixes

* feat(AM-43): fixed minikube deployment

* feat(AM-43): refactored admin app to get url path

* feat(AM-43): added admin deployment to minikube

--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
-    "docker:build:admin": "./infra/deployment/build.sh vite admin",
-    "docker:build:registry": "./infra/deployment/build.sh nestjs registry-service rest.main",
-    "docker:build:users:grpc": "./infra/deployment/build.sh nestjs users-service grpc.main",
-    "docker:build:users:graphql": "./infra/deployment/build.sh nestjs users-service graphql.main",
-    "docker:build:auth:grpc": "./infra/deployment/build.sh nestjs auth-service grpc.main",
-    "docker:build:auth:graphql": "./infra/deployment/build.sh nestjs auth-service graphql.main",
-    "docker:build:api:gateway": "./infra/deployment/build.sh nestjs api-gateway-service graphql.main",
-    "docker:build:services": "pnpm run docker:build:registry && pnpm run docker:build:users-grpc && pnpm run docker:build:auth-grpc && pnpm run docker:build:api-gateway",
+    "docker:build:admin": "docker build -f infra/deployment/docker/Dockerfile.vite --build-arg APP_NAME=admin -t admin:latest .",
+    "docker:build:registry:rest": "docker build -f infra/deployment/docker/Dockerfile.nestjs --build-arg APP_NAME=registry-service --build-arg APP_TYPE=rest --build-arg ENTRY_POINT=rest.main -t registry-service-rest:latest .",
+    "docker:build:users:grpc": "docker build -f infra/deployment/docker/Dockerfile.nestjs --build-arg APP_NAME=users-service --build-arg APP_TYPE=grpc --build-arg ENTRY_POINT=grpc.main -t users-service-grpc:latest .",
+    "docker:build:users:graphql": "docker build -f infra/deployment/docker/Dockerfile.nestjs --build-arg APP_NAME=users-service --build-arg APP_TYPE=graphql --build-arg ENTRY_POINT=graphql.main -t users-service-graphql:latest .",
+    "docker:build:auth:grpc": "docker build -f infra/deployment/docker/Dockerfile.nestjs --build-arg APP_NAME=auth-service --build-arg APP_TYPE=grpc --build-arg ENTRY_POINT=grpc.main -t auth-service-grpc:latest .",
+    "docker:build:auth:graphql": "docker build -f infra/deployment/docker/Dockerfile.nestjs --build-arg APP_NAME=auth-service --build-arg APP_TYPE=graphql --build-arg ENTRY_POINT=graphql.main -t auth-service-graphql:latest .",
+    "docker:build:api:gateway:graphql": "docker build -f infra/deployment/docker/Dockerfile.nestjs --build-arg APP_NAME=api-gateway-service --build-arg APP_TYPE=graphql --build-arg ENTRY_POINT=graphql.main -t api-gateway-service-graphql:latest .",
+    "docker:build:api:gateway:rest": "docker build -f infra/deployment/docker/Dockerfile.nestjs --build-arg APP_NAME=api-gateway-service --build-arg APP_TYPE=rest --build-arg ENTRY_POINT=rest.main -t api-gateway-service-rest:latest .",
+    "docker:build:services": "pnpm run docker:build:registry && pnpm run docker:build:users:grpc && pnpm run docker:build:auth:grpc && pnpm run docker:build:api:gateway:graphql",
     "docker:build:all": "pnpm run docker:build:admin && pnpm run docker:build:services"
   },
   "workspaces": [
