--- a/infra/deployment/docker/Dockerfile.nextjs
+++ b/infra/deployment/docker/Dockerfile.nextjs
@@ -1,77 +1,113 @@
-# Build args
-ARG NODE_VERSION=24.11.1
+# Multi-stage Dockerfile for Next.js applications
+#
+# BUILD:
+#   docker build -f infra/deployment/docker/Dockerfile.nextjs \
+#     --build-arg APP_NAME=web \
+#     -t web:latest .
+#
+# ARGS:
+#   APP_NAME - Application name (e.g., web)
 
-# Stage 1: Base image with pnpm
+# ============================================================================
+# Global build args
+# ============================================================================
+ARG NODE_VERSION=24.11.1
+ARG PNPM_VERSION=9.15.3
+ARG APP_NAME
+
+# Packages excluded from Next.js builds (backend/dev-only)
+ARG EXCLUDED_PACKAGES="nest-shared scripts graphql/definitions grpc eslint-config-base eslint-config-service eslint-config-ui"
+
+# ============================================================================
+# Stage 1: Base - Node.js with pnpm
+# ============================================================================
 FROM node:${NODE_VERSION}-alpine AS base
+
+ARG PNPM_VERSION
 
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 
 RUN apk add --no-cache libc6-compat && \
-    npm install -g pnpm@9.15.3
-
-# Stage 2: Dependencies installation
-FROM base AS deps
+    npm install -g pnpm@${PNPM_VERSION}
 
 WORKDIR /app
 
-# Copy package manager files
+# ============================================================================
+# Stage 2: Package filter - keep only relevant package.json files
+# ============================================================================
+FROM base AS packages-filter
+
+ARG EXCLUDED_PACKAGES
+
+COPY packages/ ./packages/
+
+RUN for pkg in ${EXCLUDED_PACKAGES}; do \
+      rm -rf "./packages/${pkg}"; \
+    done && \
+    find ./packages -mindepth 2 -type f ! -name 'package.json' -delete && \
+    find ./packages -mindepth 2 -type d -empty -delete
+
+# ============================================================================
+# Stage 3: Dependencies - install with pnpm
+# ============================================================================
+FROM base AS deps
+
+ARG APP_NAME
+
 COPY pnpm-lock.yaml pnpm-workspace.yaml package.json .npmrc ./
 COPY turbo.json ./
 
-# Copy package.json files from workspace packages
-COPY packages/*/package.json ./packages/
-COPY packages/graphql/*/package.json ./packages/graphql/
+COPY --from=packages-filter /app/packages/ ./packages/
 
-# Copy web app package.json
-COPY apps/web/package.json ./apps/web/
+COPY apps/${APP_NAME}/package.json ./apps/${APP_NAME}/
 
-# Install dependencies using pnpm
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
-    pnpm install --frozen-lockfile
+RUN --mount=type=cache,id=pnpm-nextjs,target=/pnpm/store \
+    pnpm install --frozen-lockfile --prefer-offline
 
-# Stage 3: Build stage
-FROM base AS builder
+# ============================================================================
+# Stage 4: Build - compile workspace packages and Next.js app
+# ============================================================================
+FROM deps AS builder
 
-WORKDIR /app
+ARG APP_NAME
+ARG EXCLUDED_PACKAGES
 
-# Copy dependencies from deps stage
-COPY --from=deps /app/node_modules ./node_modules
-COPY --from=deps /app/packages ./packages
-COPY --from=deps /app/apps/web/node_modules ./apps/web/node_modules
+COPY pnpm-workspace.yaml turbo.json package.json ./
 
-# Copy source code
-COPY . .
+COPY packages/ ./packages/
+RUN for pkg in ${EXCLUDED_PACKAGES}; do \
+      rm -rf "./packages/${pkg}"; \
+    done
 
-# Build packages first (workspace dependencies)
-RUN pnpm turbo run build --filter='./packages/*'
+COPY apps/${APP_NAME} ./apps/${APP_NAME}
+COPY --from=deps /app/apps/${APP_NAME}/node_modules ./apps/${APP_NAME}/node_modules
 
-# Build Next.js app
+# Build app and its workspace dependencies only (avoids backend-only packages like grpc)
 ENV NEXT_TELEMETRY_DISABLED=1
-RUN pnpm turbo run build --filter=web
+RUN pnpm turbo run build --filter=${APP_NAME}...
 
-# Stage 4: Production runtime
+# ============================================================================
+# Stage 5: Production runtime
+# ============================================================================
 FROM node:${NODE_VERSION}-alpine AS runner
 
+ARG APP_NAME
+
 WORKDIR /app
 
-# Install dumb-init for proper signal handling
 RUN apk add --no-cache dumb-init
 
-# Create non-root user
 RUN addgroup --system --gid 1001 nodejs && \
     adduser --system --uid 1001 nextjs
 
-# Copy necessary files from builder
-COPY --from=builder /app/apps/web/next.config.ts ./
-COPY --from=builder /app/apps/web/package.json ./
+COPY --from=builder /app/apps/${APP_NAME}/next.config.ts ./
+COPY --from=builder /app/apps/${APP_NAME}/package.json ./
 
-# Copy public assets
-COPY --from=builder --chown=nextjs:nodejs /app/apps/web/public ./public
+COPY --from=builder --chown=nextjs:nodejs /app/apps/${APP_NAME}/public ./public
 
-# Copy Next.js build output
-COPY --from=builder --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/apps/web/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/apps/${APP_NAME}/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/apps/${APP_NAME}/.next/static ./.next/static
 
 USER nextjs
 
@@ -81,6 +117,7 @@ ENV NODE_ENV=production
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 ENV NEXT_TELEMETRY_DISABLED=1
+ENV APP_ENTRY=apps/${APP_NAME}/server.js
 
 ENTRYPOINT ["dumb-init", "--"]
-CMD ["node", "server.js"]
+CMD ["sh", "-c", "node $APP_ENTRY"]
