--- a/infra/deployment/kubernetes/helm/values/auth-service/auth-service-grpc.yaml
+++ b/infra/deployment/kubernetes/helm/values/auth-service/auth-service-grpc.yaml
@@ -1,41 +1,52 @@
-# Users service (gRPC). Convention: protocol=grpc -> port 5000.
-# Config keys from apps/users-service/.env.example
-# Install: helm install users-grpc charts/microservice -f values/cluster.yaml -f values/users-service/users-grpc.yaml -n <ns>
+# Auth service (gRPC). Convention: protocol=grpc -> port 5000.
+# Config keys from apps/auth-service/.env.example
+# Install: helm install auth-grpc charts/microservice -f values/cluster.yaml -f values/auth-service/auth-service-grpc.yaml -n <ns>
 
-fullnameOverride: users-grpc
+fullnameOverride: auth-service-grpc
 component: grpc
 
 protocol: grpc
 
 image:
-  name: users-service-grpc
+  name: auth-service-grpc
   tag: latest
   pullPolicy: Always
 
 command: ["node", "dist/src/grpc.main"]
 
 dependencies:
-  - service: registry
+  - service: users-service-grpc
+  - service: registry-service-rest
 
+# Wait for users-service to be registered in the registry before starting,
+# because GrpcClientModule queries the registry for users-service:grpc at startup.
+waitForRegistry:
+  - name: users-service
+    appType: grpc
+
+# Service-specific env only; NODE_ENV, LOG_LEVEL, etc. from global-shared-config.
 env:
   - name: APP_NAME
-    value: "users-service"
-  - name: USERS_SERVICE_GRAPHQL_URL
-    value: "http://users-graphql:80"
-  - name: USERS_SERVICE_GRPC_URL
-    value: "users-grpc:5000"
+    value: "auth-service"
+  - name: AUTH_SERVICE_GRAPHQL_URL
+    value: "http://auth-service-graphql:80"
+  - name: AUTH_SERVICE_GRPC_URL
+    value: "auth-service-grpc:5000"
   - name: INTERNAL_REGISTRY_SERVER_HOST
-    value: "http://registry:80"
+    value: "http://registry-service-rest:80"
 
 secretKeys:
   - DB_CONNECTION_URL
+  - AT_SECRET
+  - RT_SECRET
+  - COOKIES_MAX_AGE
 
-existingSecret: users-grpc-service-config
+existingSecret: auth-grpc-service-config
 
 # AWS CSI: SecretProviderClass name (applied when secretsVolume.type=csi via values/aws.yaml)
 secretsVolume:
   csi:
-    secretProviderClass: users-service-secrets
+    secretProviderClass: auth-service-secrets
 
 resources:
   requests:
@@ -61,7 +72,7 @@ autoscaling:
 service:
   type: ClusterIP
 
-# NetworkPolicy: allow traffic from users-graphql, egress to external DB + registry.
+# NetworkPolicy: allow traffic from auth-graphql, egress to external DB + registry + users-grpc.
 networkPolicy:
   enabled: true
   policyTypes:
@@ -103,3 +114,4 @@ networkPolicy:
       ports:
         - port: 5432
           protocol: TCP
+
