--- a/infra/deployment/kubernetes/helm/values/users-service/users-service-graphql.yaml
+++ b/infra/deployment/kubernetes/helm/values/users-service/users-service-graphql.yaml
@@ -1,45 +1,41 @@
-# Auth service (GraphQL). Convention: protocol=http -> port 3000/80.
-# Config keys from apps/auth-service/.env.example
-# Install: helm install auth-graphql charts/microservice -f values/cluster.yaml -f values/auth-service/auth-graphql.yaml -n <ns>
+# Users service (GraphQL). Convention: protocol=http -> port 3000/80.
+# Config keys from apps/users-service/.env.example
+# Install: helm install users-graphql charts/microservice -f values/cluster.yaml -f values/users-service/users-service-graphql.yaml -n <ns>
 
-fullnameOverride: auth-graphql
+fullnameOverride: users-service-graphql
 component: graphql
 
-# protocol: http (default)
 portEnvKey: APP_GRAPHQL_PORT
 
 image:
-  name: auth-service-graphql
+  name: users-service-graphql
   tag: latest
   pullPolicy: Always
 
 command: ["node", "dist/src/graphql.main"]
 
 dependencies:
-  - service: auth-grpc
+  - service: users-service-grpc
 
 env:
   - name: APP_NAME
-    value: "auth-service"
-  - name: AUTH_SERVICE_GRAPHQL_URL
-    value: "http://auth-graphql:80"
-  - name: AUTH_SERVICE_GRPC_URL
-    value: "auth-grpc:5000"
+    value: "users-service"
+  - name: USERS_SERVICE_GRAPHQL_URL
+    value: "http://users-service-graphql:80"
+  - name: USERS_SERVICE_GRPC_URL
+    value: "users-service-grpc:5000"
   - name: INTERNAL_REGISTRY_SERVER_HOST
-    value: "http://registry:80"
+    value: "http://registry-service-rest:80"
 
 secretKeys:
   - DB_CONNECTION_URL
-  - AT_SECRET
-  - RT_SECRET
-  - COOKIES_MAX_AGE
 
-existingSecret: auth-graphql-service-config
+existingSecret: users-graphql-service-config
 
 # AWS CSI: SecretProviderClass name (applied when secretsVolume.type=csi via values/aws.yaml)
 secretsVolume:
   csi:
-    secretProviderClass: auth-service-secrets
+    secretProviderClass: users-service-secrets
 
 resources:
   requests:
@@ -60,7 +56,7 @@ autoscaling:
 service:
   type: ClusterIP
 
-# NetworkPolicy: allow traffic from api-gateway-graphql, egress to auth-grpc.
+# NetworkPolicy: allow traffic from api-gateway-graphql, egress to users-grpc.
 networkPolicy:
   enabled: true
   policyTypes:
@@ -91,3 +87,4 @@ networkPolicy:
       ports:
         - port: 80
           protocol: TCP
+
