--- a/infra/deployment/kubernetes/helm/charts/microservice/templates/migration-job.yaml
+++ b/infra/deployment/kubernetes/helm/charts/microservice/templates/migration-job.yaml
@@ -1,36 +1,24 @@
-apiVersion: apps/v1
-kind: Deployment
+{{- if .Values.migration.enabled }}
+apiVersion: batch/v1
+kind: Job
 metadata:
-  name: {{ include "microservice.fullname" . }}
+  name: {{ include "microservice.fullname" . }}-migrate
   labels:
     {{- include "microservice.labels" . | nindent 4 }}
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "-5"
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
 spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-  {{- end }}
-  {{- with .Values.strategy }}
-  strategy:
-    type: {{ .type }}
-    {{- if and .rollingUpdate (ne .type "Recreate") }}
-    rollingUpdate:
-      {{- toYaml .rollingUpdate | nindent 6 }}
-    {{- end }}
-  {{- end }}
-  selector:
-    matchLabels:
-      {{- include "microservice.selectorLabels" . | nindent 6 }}
+  ttlSecondsAfterFinished: 300
+  backoffLimit: 3
   template:
     metadata:
-      annotations:
-        {{- with .Values.podAnnotations }}
-        {{- toYaml . | nindent 8 }}
-        {{- end }}
       labels:
         {{- include "microservice.selectorLabels" . | nindent 8 }}
-        {{- with .Values.podLabels }}
-        {{- toYaml . | nindent 8 }}
-        {{- end }}
+        app.kubernetes.io/component: migration
     spec:
+      restartPolicy: OnFailure
       {{- with .Values.image.pullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -77,39 +65,13 @@ spec:
             - name: app-secrets
               mountPath: /app-secrets
               readOnly: true
-        {{- if .Values.dependencies }}
-        - name: wait-for-dependencies
-          image: busybox:1.36
-          command:
-            - /bin/sh
-            - -c
-            - |
-              set -e
-              echo "Waiting for dependent services..."
-              {{- range .Values.dependencies }}
-              {{- $depPort := .port | default (index $.Values.cluster.knownServices .service) }}
-              until nc -z {{ .service }} {{ $depPort }} 2>/dev/null; do
-                echo "Waiting for {{ .service }}:{{ $depPort }}..."
-                sleep 2
-              done
-              echo "{{ .service }}:{{ $depPort }} is ready"
-              {{- end }}
-        {{- end }}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: migrate
           {{- $repo := .Values.image.repository | default .Values.imageRepository }}
           image: "{{ if $repo }}{{ $repo }}/{{ end }}{{ .Values.image.name }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- if .Values.command }}
-          command: {{- toYaml .Values.command | nindent 12 }}
-          {{- end }}
-          ports:
-            - name: {{ include "microservice.portName" . }}
-              containerPort: {{ include "microservice.containerPort" . }}
-              protocol: TCP
+          command: {{- toYaml .Values.migration.command | nindent 12 }}
           env:
-            - name: {{ .Values.portEnvKey | default (include "microservice.portEnvKey" .) }}
-              value: {{ include "microservice.containerPort" . | quote }}
             - name: DOTENV_CONFIG_PATH
               value: "{{ .Values.configVolume.mountPath }}/{{ .Values.configVolume.envFilePath }}"
             {{- with .Values.env }}
@@ -120,40 +82,12 @@ spec:
               mountPath: "{{ .Values.configVolume.mountPath }}"
               readOnly: true
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-          {{- if eq (include "microservice.protocol" .) "http" }}
-          livenessProbe:
-            httpGet:
-              path: /health/live
-              port: {{ include "microservice.containerPort" . }}
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
-          readinessProbe:
-            httpGet:
-              path: /health/ready
-              port: {{ include "microservice.containerPort" . }}
-            initialDelaySeconds: 5
-            periodSeconds: 5
-            timeoutSeconds: 3
-            failureThreshold: 2
-          {{- else }}
-          livenessProbe:
-            tcpSocket:
-              port: {{ include "microservice.containerPort" . }}
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
-          readinessProbe:
-            tcpSocket:
-              port: {{ include "microservice.containerPort" . }}
-            initialDelaySeconds: 5
-            periodSeconds: 5
-            timeoutSeconds: 3
-            failureThreshold: 2
-          {{- end }}
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
       volumes:
         - name: shared-config
           configMap:
@@ -180,11 +114,8 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
       {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
