--- a/infra/deployment/kubernetes/helm/values/auth-service/auth-service-graphql.yaml
+++ b/infra/deployment/kubernetes/helm/values/auth-service/auth-service-graphql.yaml
@@ -36,6 +36,10 @@ secretKeys:
 
 existingSecret: auth-graphql-service-config
 
+# Run DB migrations before install/upgrade.
+migration:
+  enabled: true
+
 # AWS CSI: SecretProviderClass name (applied when secretsVolume.type=csi via values/aws.yaml)
 secretsVolume:
   csi:
