--- a/infra/deployment/kubernetes/helm/values/auth-service/auth-service-grpc.yaml
+++ b/infra/deployment/kubernetes/helm/values/auth-service/auth-service-grpc.yaml
@@ -18,12 +18,6 @@ dependencies:
   - service: users-service-grpc
   - service: registry-service-rest
 
-# Wait for users-service to be registered in the registry before starting,
-# because GrpcClientModule queries the registry for users-service:grpc at startup.
-waitForRegistry:
-  - name: users-service
-    appType: grpc
-
 # Service-specific env only; NODE_ENV, LOG_LEVEL, etc. from global-shared-config.
 env:
   - name: APP_NAME
@@ -42,6 +36,10 @@ secretKeys:
   - COOKIES_MAX_AGE
 
 existingSecret: auth-grpc-service-config
+
+# Run DB migrations before install/upgrade.
+migration:
+  enabled: true
 
 # AWS CSI: SecretProviderClass name (applied when secretsVolume.type=csi via values/aws.yaml)
 secretsVolume:
