--- a/infra/deployment/kubernetes/helm/values/users-service/users-service-graphql.yaml
+++ b/infra/deployment/kubernetes/helm/values/users-service/users-service-graphql.yaml
@@ -1,36 +1,40 @@
-# Users service (gRPC). Convention: protocol=grpc -> port 5000.
+# Users service (GraphQL). Convention: protocol=http -> port 3000/80.
 # Config keys from apps/users-service/.env.example
-# Install: helm install users-grpc charts/microservice -f values/cluster.yaml -f values/users-service/users-grpc.yaml -n <ns>
+# Install: helm install users-graphql charts/microservice -f values/cluster.yaml -f values/users-service/users-service-graphql.yaml -n <ns>
 
-fullnameOverride: users-grpc
-component: grpc
+fullnameOverride: users-service-graphql
+component: graphql
 
-protocol: grpc
+portEnvKey: APP_GRAPHQL_PORT
 
 image:
-  name: users-service-grpc
+  name: users-service-graphql
   tag: latest
   pullPolicy: Always
 
-command: ["node", "dist/src/grpc.main"]
+command: ["node", "dist/src/graphql.main"]
 
 dependencies:
-  - service: registry
+  - service: users-service-grpc
 
 env:
   - name: APP_NAME
     value: "users-service"
   - name: USERS_SERVICE_GRAPHQL_URL
-    value: "http://users-graphql:80"
+    value: "http://users-service-graphql:80"
   - name: USERS_SERVICE_GRPC_URL
-    value: "users-grpc:5000"
+    value: "users-service-grpc:5000"
   - name: INTERNAL_REGISTRY_SERVER_HOST
-    value: "http://registry:80"
+    value: "http://registry-service-rest:80"
 
 secretKeys:
   - DB_CONNECTION_URL
 
-existingSecret: users-grpc-service-config
+existingSecret: users-graphql-service-config
+
+# Run DB migrations before install/upgrade.
+migration:
+  enabled: true
 
 # AWS CSI: SecretProviderClass name (applied when secretsVolume.type=csi via values/aws.yaml)
 secretsVolume:
@@ -47,11 +51,6 @@ resources:
 
 replicaCount: 1
 
-# Recreate ensures old pod terminates before new one starts,
-# preventing the serviceId race condition (old pod unregisters new pod's entry).
-strategy:
-  type: Recreate
-
 autoscaling:
   enabled: false
   minReplicas: 1
@@ -61,7 +60,7 @@ autoscaling:
 service:
   type: ClusterIP
 
-# NetworkPolicy: allow traffic from users-graphql, egress to external DB + registry.
+# NetworkPolicy: allow traffic from api-gateway-graphql, egress to users-grpc.
 networkPolicy:
   enabled: true
   policyTypes:
@@ -71,12 +70,12 @@ networkPolicy:
     - from:
         - podSelector:
             matchLabels:
-              app.kubernetes.io/component: graphql
+              app.kubernetes.io/component: gateway
       ports:
-        - port: 5000
+        - port: 80
           protocol: TCP
   egress:
-    # Allow to other gRPC services (inter-service communication)
+    # Allow to all gRPC services
     - to:
         - podSelector:
             matchLabels:
@@ -92,14 +91,4 @@ networkPolicy:
       ports:
         - port: 80
           protocol: TCP
-    # Allow to external database (all external IPs)
-    - to:
-        - ipBlock:
-            cidr: 0.0.0.0/0
-            except:
-              - 10.0.0.0/8
-              - 172.16.0.0/12
-              - 192.168.0.0/16
-      ports:
-        - port: 5432
-          protocol: TCP
+
