--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
+    "docker:build:web": "docker build -f infra/deployment/docker/Dockerfile.nextjs --build-arg APP_NAME=web -t web:latest .",
     "docker:build:admin": "docker build -f infra/deployment/docker/Dockerfile.vite --build-arg APP_NAME=admin -t admin:latest .",
     "docker:build:registry:rest": "docker build -f infra/deployment/docker/Dockerfile.nestjs --build-arg APP_NAME=registry-service --build-arg APP_TYPE=rest --build-arg ENTRY_POINT=rest.main -t registry-service-rest:latest .",
     "docker:build:users:grpc": "docker build -f infra/deployment/docker/Dockerfile.nestjs --build-arg APP_NAME=users-service --build-arg APP_TYPE=grpc --build-arg ENTRY_POINT=grpc.main -t users-service-grpc:latest .",
@@ -30,7 +31,8 @@
     "docker:build:api:gateway:graphql": "docker build -f infra/deployment/docker/Dockerfile.nestjs --build-arg APP_NAME=api-gateway-service --build-arg APP_TYPE=graphql --build-arg ENTRY_POINT=graphql.main -t api-gateway-service-graphql:latest .",
     "docker:build:api:gateway:rest": "docker build -f infra/deployment/docker/Dockerfile.nestjs --build-arg APP_NAME=api-gateway-service --build-arg APP_TYPE=rest --build-arg ENTRY_POINT=rest.main -t api-gateway-service-rest:latest .",
     "docker:build:services": "pnpm run docker:build:registry && pnpm run docker:build:users:grpc && pnpm run docker:build:auth:grpc && pnpm run docker:build:api:gateway:graphql",
-    "docker:build:all": "pnpm run docker:build:admin && pnpm run docker:build:services"
+    "docker:build:clients": "pnpm run docker:build:admin && pnpm run docker:build:web",
+    "docker:build:all": "pnpm run docker:build:clients && pnpm run docker:build:services"
   },
   "workspaces": [
     "apps/*",
