--- a/infra/deployment/docker/Dockerfile.nextjs
+++ b/infra/deployment/docker/Dockerfile.nextjs
@@ -1,77 +1,87 @@
-# Build args
-ARG NODE_VERSION=24.11.1
+# Multi-stage Dockerfile for Next.js applications
+#
+# Follows https://pnpm.io/docker: BuildKit cache mount, full install, build with filter.
+#
+# BUILD:
+#   docker build -f infra/deployment/docker/Dockerfile.nextjs \
+#     --build-arg APP_NAME=web \
+#     -t web:latest .
+#
+# ARGS:
+#   APP_NAME - Application name (e.g., web)
 
-# Stage 1: Base image with pnpm
+# ============================================================================
+# Global build args
+# ============================================================================
+ARG NODE_VERSION=24.14.0
+ARG PNPM_VERSION=9.15.3
+ARG APP_NAME
+
+# ============================================================================
+# Stage 1: Base - Node.js with pnpm (corepack)
+# ============================================================================
 FROM node:${NODE_VERSION}-alpine AS base
+
+ARG PNPM_VERSION
 
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 
-RUN apk add --no-cache libc6-compat && \
-    npm install -g pnpm@9.15.3
+RUN corepack enable && corepack prepare pnpm@${PNPM_VERSION} --activate && \
+    apk add --no-cache libc6-compat
 
-# Stage 2: Dependencies installation
+WORKDIR /app
+
+# ============================================================================
+# Stage 2: Dependencies - install with pnpm (BuildKit cache mount)
+# ============================================================================
 FROM base AS deps
 
-WORKDIR /app
+ARG APP_NAME
 
-# Copy package manager files
 COPY pnpm-lock.yaml pnpm-workspace.yaml package.json .npmrc ./
 COPY turbo.json ./
+COPY packages/ ./packages/
+COPY apps/${APP_NAME}/package.json ./apps/${APP_NAME}/
 
-# Copy package.json files from workspace packages
-COPY packages/*/package.json ./packages/
-COPY packages/graphql/*/package.json ./packages/graphql/
-
-# Copy web app package.json
-COPY apps/web/package.json ./apps/web/
-
-# Install dependencies using pnpm
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
-    pnpm install --frozen-lockfile
+    pnpm install --frozen-lockfile --prefer-offline
 
-# Stage 3: Build stage
-FROM base AS builder
+# ============================================================================
+# Stage 3: Build - compile app and its workspace dependencies only
+# ============================================================================
+FROM deps AS builder
 
-WORKDIR /app
+ARG APP_NAME
 
-# Copy dependencies from deps stage
-COPY --from=deps /app/node_modules ./node_modules
-COPY --from=deps /app/packages ./packages
-COPY --from=deps /app/apps/web/node_modules ./apps/web/node_modules
+COPY apps/${APP_NAME} ./apps/${APP_NAME}
+COPY --from=deps /app/apps/${APP_NAME}/node_modules ./apps/${APP_NAME}/node_modules
 
-# Copy source code
-COPY . .
-
-# Build packages first (workspace dependencies)
-RUN pnpm turbo run build --filter='./packages/*'
-
-# Build Next.js app
+# Build only this app and its deps; avoids building backend packages (e.g. grpc)
 ENV NEXT_TELEMETRY_DISABLED=1
-RUN pnpm turbo run build --filter=web
+RUN pnpm turbo run build --filter=${APP_NAME}...
 
+# ============================================================================
 # Stage 4: Production runtime
+# ============================================================================
 FROM node:${NODE_VERSION}-alpine AS runner
 
+ARG APP_NAME
+
 WORKDIR /app
 
-# Install dumb-init for proper signal handling
 RUN apk add --no-cache dumb-init
 
-# Create non-root user
 RUN addgroup --system --gid 1001 nodejs && \
     adduser --system --uid 1001 nextjs
 
-# Copy necessary files from builder
-COPY --from=builder /app/apps/web/next.config.ts ./
-COPY --from=builder /app/apps/web/package.json ./
+COPY --from=builder /app/apps/${APP_NAME}/next.config.ts ./
+COPY --from=builder /app/apps/${APP_NAME}/package.json ./
 
-# Copy public assets
-COPY --from=builder --chown=nextjs:nodejs /app/apps/web/public ./public
+COPY --from=builder --chown=nextjs:nodejs /app/apps/${APP_NAME}/public ./public
 
-# Copy Next.js build output
-COPY --from=builder --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/apps/web/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/apps/${APP_NAME}/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/apps/${APP_NAME}/.next/static ./.next/static
 
 USER nextjs
 
@@ -81,6 +91,7 @@ ENV NODE_ENV=production
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 ENV NEXT_TELEMETRY_DISABLED=1
+ENV APP_ENTRY=apps/${APP_NAME}/server.js
 
 ENTRYPOINT ["dumb-init", "--"]
-CMD ["node", "server.js"]
+CMD ["sh", "-c", "node $APP_ENTRY"]
