--- a/infra/deployment/kubernetes/helm/values/auth-service/auth-service-grpc.yaml
+++ b/infra/deployment/kubernetes/helm/values/auth-service/auth-service-grpc.yaml
@@ -1,8 +1,8 @@
 # Auth service (gRPC). Convention: protocol=grpc -> port 5000.
 # Config keys from apps/auth-service/.env.example
-# Install: helm install auth-grpc charts/microservice -f values/cluster.yaml -f values/auth-service/auth-grpc.yaml -n <ns>
+# Install: helm install auth-grpc charts/microservice -f values/cluster.yaml -f values/auth-service/auth-service-grpc.yaml -n <ns>
 
-fullnameOverride: auth-grpc
+fullnameOverride: auth-service-grpc
 component: grpc
 
 protocol: grpc
@@ -15,25 +15,19 @@ image:
 command: ["node", "dist/src/grpc.main"]
 
 dependencies:
-  - service: users-grpc
-  - service: registry
-
-# Wait for users-service to be registered in the registry before starting,
-# because GrpcClientModule queries the registry for users-service:grpc at startup.
-waitForRegistry:
-  - name: users-service
-    appType: grpc
+  - service: users-service-grpc
+  - service: registry-service-rest
 
 # Service-specific env only; NODE_ENV, LOG_LEVEL, etc. from global-shared-config.
 env:
   - name: APP_NAME
     value: "auth-service"
   - name: AUTH_SERVICE_GRAPHQL_URL
-    value: "http://auth-graphql:80"
+    value: "http://auth-service-graphql:80"
   - name: AUTH_SERVICE_GRPC_URL
-    value: "auth-grpc:5000"
+    value: "auth-service-grpc:5000"
   - name: INTERNAL_REGISTRY_SERVER_HOST
-    value: "http://registry:80"
+    value: "http://registry-service-rest:80"
 
 secretKeys:
   - DB_CONNECTION_URL
@@ -42,6 +36,10 @@ secretKeys:
   - COOKIES_MAX_AGE
 
 existingSecret: auth-grpc-service-config
+
+# Run DB migrations before install/upgrade.
+migration:
+  enabled: true
 
 # AWS CSI: SecretProviderClass name (applied when secretsVolume.type=csi via values/aws.yaml)
 secretsVolume:
@@ -114,3 +112,4 @@ networkPolicy:
       ports:
         - port: 5432
           protocol: TCP
+
