--- a/packages/tsconfig/tsconfig.base.json
+++ b/packages/tsconfig/tsconfig.base.json
@@ -9,6 +9,7 @@
     "incremental": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "noImplicitOverride": true
+    "noImplicitOverride": true,
+    "isolatedModules": true
   }
 }
